--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Redirecting to https://suraif.github.io/</title>
+  <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
   <meta http-equiv="refresh" content="0; URL=https://suraif.github.io/">
   <link rel="canonical" href="https://suraif.github.io/">
 </head>
